<resources>
    <string name="app_name">FindMe</string>
    <string name="login_txtEmail">Digite su email</string>
    <string name="login_txtClave">Digite su clave</string>
    <string name="btn_Ingresar">Ingresar</string>
    <string name="contactos_Btn_Guardar">Guardar</string>
    <string name="contactos_Btn_Regresar">Regresar</string>
    <string name="contactos_Hint_Nombre">Nombre</string>
    <string name="contactos_HInt_Email">Email</string>
    <string name="contactos_Hint_Telefono">Telefono</string>
    <string name="contactos_Hint_Direccion">Direccón</string>
    <string name="title_activity_pruebas">Pruebas</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="btn_acercade_bienvenida">Acerca de</string>
    <string name="btn_contactos_bienvenida">Mis contactos</string>
    <string name="btn_viajes_bienvenida">Mis viajes</string>

    <string name="menu_mniHome">Home</string>
    <string name="menu_mniPerfil">Perfil</string>
    <string name="menu_mniContactos">Agregar contacto</string>
    <string name="menu_mniLugares">Lugares</string>
    <string name="menu_mniAcerca">Acerca de</string>

    <string name="Acercade_creado">Creado por</string>
    <string name="Acercade_creadores">Grupo 5 V19 </string>
    <string name="Acercade_misiontic">MISIÓN TIC</string>

    <!-- String de las activities lugares, lugares_add y lugares_edit_delete -->
    <string name="img_descripcion_geolocalizacionCalles">Imagen tipo vector de Mapa</string>
    <string name="btnEditar_descripcion">Botón para Editar</string>
    <string name="btnEliminar_descripcion">Botón para Eliminar</string>
    <string name="btnRegistrar_descripcion">Botón para Guardar</string>
    <string name="txt_hint_Nombre">Nombre del Lugar</string>
    <string name="txt_hint_Descripcion">Descripción del Lugar</string>
    <string name="txt_hint_Latitud">Latitud del Lugar</string>
    <string name="txt_hint_Longitud">Longitut del Lugar</string>
    <string name="txt_hint_id">ID No Editable</string>
    <string name="btn_Guardar_LugaresEdit">Guardar</string>
    <string name="btn_Regresar_LugaresEdit">Regresar</string>
    <string name="btn_buscar_Lugares">Buscar</string>
    <string name="txt_hint_busqueda">Criterio de Busqueda</string>
    <!--


    <string name=""></string>
    <string name=""></string>
    -->
</resources>