<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Teal_50"
    tools:context=".Login">

    <EditText
        android:id="@+id/txt_Email_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/login_txtEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/text_Pass_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/login_txtClave"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Email_Login" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="225dp"
        android:layout_height="161dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/logofinal" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="FindMe"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#152A9F"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Registro_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="40dp"
        android:background="@color/design_default_color_secondary_variant"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:insetLeft="5dp"
        android:insetRight="5dp"
        android:onClick="ir_Registro"
        android:text="Registro"
        app:iconSize="10dp"
        app:iconTint="@color/design_default_color_secondary_variant"
        app:layout_constraintStart_toEndOf="@+id/btn_Ingresar_Login"
        app:layout_constraintTop_toBottomOf="@+id/text_Pass_Login"
        app:rippleColor="@color/Teal_700" />

    <Button
        android:id="@+id/btn_Ingresar_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:background="@color/design_default_color_background"
        android:backgroundTint="@color/design_default_color_background"
        android:insetLeft="5dp"
        android:insetRight="5dp"
        android:onClick="ir_Bienvenida"
        android:shadowColor="@color/Teal_200"
        android:text="@string/btn_Ingresar"
        app:iconSize="10dp"
        app:iconTint="@color/Teal_700"
        app:layout_constraintEnd_toStartOf="@+id/btn_Registro_Login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Pass_Login"
        app:rippleColor="@color/Teal_700" />

</androidx.constraintlayout.widget.ConstraintLayout>